--- a/DeuOrca/orcamentos/templates/orcamentos/orcamento_detail.html
+++ b/DeuOrca/orcamentos/templates/orcamentos/orcamento_detail.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}{% block content %}
+{% extends 'base.html' %}
+
+{% block content %}
 <h2>Orçamento #{{ object.id }}</h2>
 <ul class="list-group mb-3">
     <li class="list-group-item"><strong>Cliente:</strong> {{ object.cliente }}</li>
@@ -9,5 +11,5 @@
     <li class="list-group-item"><strong>Total:</strong> R$ {{ total }}</li>
     <li class="list-group-item"><strong>Criado em:</strong> {{ object.criado_em|date:"d/m/Y H:i" }}</li>
 </ul>
-<a class="btn btn-secondary" href="{% url 'pdfs:orcamento_pdf' object.id %}">Gerar PDF</a>
+<a class="btn btn-secondary" href="{% url 'orcamento_pdf' object.id %}">Gerar PDF</a>
 {% endblock %}
