--- a/DeuOrca/templates/navbar.html
+++ b/DeuOrca/templates/navbar.html
@@ -13,7 +13,7 @@
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Sair</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Sair</a></li>
                 {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Entrar</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'register' %}">Cadastrar</a></li>
